syntax = "proto3";

message EvalResult {
  repeated string cu_cost = 1;
  string func_result = 2;
  bytes storage = 3;
}